# ocaml-learn

./: .ocamlformat  exercises.ml
aoc_2022/: run.sh
data_structures/: .ocamlformat  data_structures.opam  dune-project
data_structures/lib/: doublyLinkedList.ml  doublyLinkedList.mli  utils.ml
data_structures/test/: dune  stack_test.ml
helloworld/: .ocamlformat
